--- a/services/test/BUILD.gn
+++ b/services/test/BUILD.gn
@@ -39,6 +39,7 @@ config("module_private_config") {
     "${AAMS_INTERFACES_PATH}/innerkits/asacfwk/include",
     "${AAMS_INTERFACES_PATH}/innerkits/common/include",
     "../aams/include",
+    "../../accessibility_graphics/inc",
     "mock",
     "./mock/common",
     "${ability_runtime_path}/interfaces/kits/native/ability/native/",
@@ -76,6 +77,7 @@ ohos_moduletest("aams_accessibility_touch_guider_test") {
     "../aams/src/accessibility_dumper.cpp",
     "../aams/src/accessibility_event_transmission.cpp",
     "../aams/src/accessibility_gesture_recognizer.cpp",
+    "../aams/src/accessibility_graphic_proxy.cpp",
     "../aams/src/accessibility_input_interceptor.cpp",
     "../aams/src/accessibility_keyevent_filter.cpp",
     "../aams/src/accessibility_mouse_autoclick.cpp",
@@ -171,6 +173,7 @@ ohos_moduletest("aams_accessibility_touchEvent_injector_test") {
     "../aams/src/accessibility_dumper.cpp",
     "../aams/src/accessibility_event_transmission.cpp",
     "../aams/src/accessibility_gesture_recognizer.cpp",
+    "../aams/src/accessibility_graphic_proxy.cpp",
     "../aams/src/accessibility_input_interceptor.cpp",
     "../aams/src/accessibility_keyevent_filter.cpp",
     "../aams/src/accessibility_mouse_autoclick.cpp",
@@ -267,6 +270,7 @@ ohos_moduletest("aams_accessible_ability_channel_test") {
     "../aams/src/accessibility_dumper.cpp",
     "../aams/src/accessibility_event_transmission.cpp",
     "../aams/src/accessibility_gesture_recognizer.cpp",
+    "../aams/src/accessibility_graphic_proxy.cpp",
     "../aams/src/accessibility_input_interceptor.cpp",
     "../aams/src/accessibility_keyevent_filter.cpp",
     "../aams/src/accessibility_mouse_autoclick.cpp",
@@ -368,6 +372,7 @@ ohos_moduletest("aams_server_test") {
     "../aams/src/accessibility_dumper.cpp",
     "../aams/src/accessibility_event_transmission.cpp",
     "../aams/src/accessibility_gesture_recognizer.cpp",
+    "../aams/src/accessibility_graphic_proxy.cpp",
     "../aams/src/accessibility_input_interceptor.cpp",
     "../aams/src/accessibility_keyevent_filter.cpp",
     "../aams/src/accessibility_mouse_autoclick.cpp",
@@ -467,6 +472,7 @@ ohos_moduletest("aams_accessibility_keyevent_filter_test") {
     "../aams/src/accessibility_dumper.cpp",
     "../aams/src/accessibility_event_transmission.cpp",
     "../aams/src/accessibility_gesture_recognizer.cpp",
+    "../aams/src/accessibility_graphic_proxy.cpp",
     "../aams/src/accessibility_input_interceptor.cpp",
     "../aams/src/accessibility_keyevent_filter.cpp",
     "../aams/src/accessibility_mouse_autoclick.cpp",
@@ -561,6 +567,7 @@ ohos_moduletest("aams_common_event_registry_test") {
     "../aams/src/accessibility_dumper.cpp",
     "../aams/src/accessibility_event_transmission.cpp",
     "../aams/src/accessibility_gesture_recognizer.cpp",
+    "../aams/src/accessibility_graphic_proxy.cpp",
     "../aams/src/accessibility_input_interceptor.cpp",
     "../aams/src/accessibility_keyevent_filter.cpp",
     "../aams/src/accessibility_mouse_autoclick.cpp",
