--- a/common/interface/BUILD.gn
+++ b/common/interface/BUILD.gn
@@ -83,6 +83,8 @@ ohos_shared_library("accessibility_interface") {
     "../../resources/config/build:coverage_flags",
   ]
 
+  version_script = "libaccessibility_interface.map"
+
   public_configs = [ ":accessibility_interface_public_config" ]
 
   deps = [ "../../interfaces/innerkits/common:accessibility_common" ]
