--- a/common/interface/BUILD.gn
+++ b/common/interface/BUILD.gn
@@ -71,7 +71,7 @@ ohos_shared_library("accessibility_interface") {
     integer_overflow = true
     ubsan = true
     boundary_sanitize = true
-    cfi = true
+    cfi = false
     cfi_cross_dso = true
     debug = false
   }
