--- a/interfaces/kits/napi/accessibility_extension_module_loader/BUILD.gn
+++ b/interfaces/kits/napi/accessibility_extension_module_loader/BUILD.gn
@@ -57,11 +57,16 @@ ohos_shared_library("accessibility_extension_module") {
   ]
 
   external_deps = [
+    "ability_base:base",
+    "ability_base:want",
     "ability_runtime:ability_context_native",
+    "ability_runtime:ability_manager",
     "ability_runtime:abilitykit_native",
     "ability_runtime:app_context",
     "ability_runtime:extensionkit_native",
+    "ability_runtime:napi_base_context",
     "ability_runtime:runtime",
+    "ace_engine:ace_uicontent",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
     "hilog:libhilog",
