--- a/sa_profile/accessibility.cfg
+++ b/sa_profile/accessibility.cfg
@@ -3,8 +3,7 @@
             "name" : "post-fs-data",
             "cmds" : [
                 "mkdir /data/service/el1/public/barrierfree 0711 accessibility accessibility",
-                "mkdir /data/service/el1/public/barrierfree/accessibility_ability_manager_service 0711 accessibility accessibility",
-                "start accessibility"
+                "mkdir /data/service/el1/public/barrierfree/accessibility_ability_manager_service 0711 accessibility accessibility"
             ]
         }
     ],
@@ -31,7 +30,8 @@
                 "ohos.permission.INJECT_INPUT_EVENT",
                 "ohos.permission.FILTER_INPUT_EVENT",
                 "ohos.permission.MANAGE_MOUSE_CURSOR"
-            ]
+            ],
+            "ondemand" : true
         }
     ]
 }
