--- a/services/aams/BUILD.gn
+++ b/services/aams/BUILD.gn
@@ -115,6 +115,10 @@ ohos_shared_library("accessibleabilityms") {
     "eventhandler:libeventhandler",
     "ffrt:libffrt",
     "graphic_2d:2d_graphics",
+    "graphic_2d:EGL",
+    "graphic_2d:GLESv3",
+    "graphic_2d:libcomposer",
+    "graphic_2d:librender_service_base",
     "graphic_2d:librender_service_client",
     "hicollie:libhicollie",
     "hilog:libhilog",
